@@ -32,7 +32,7 @@ jobs:
 
     - name: Setup OpenGL and cross compilation tools
       run: |
-        sudo apt -y install libc-dev-arm64-cross libstdc++-12-dev-arm64-cross g++-12-aarch64-linux-gnu
+        sudo apt -y install libc6-dev-arm64-cross libc-dev-arm64-cross libstdc++-10-dev-arm64-cross libstdc++-12-dev-arm64-cross g++-12-aarch64-linux-gnu
         # sudo apt -y install gcc-multilib g++-multilib libc6-dev-arm64-cross libstdc++-10-dev-arm64-cross g++-aarch64-linux-gnu
         sudo apt -y install libopengl-dev:arm64 libxrandr-dev:arm64 mesa-common-dev:arm64 libxinerama-dev:arm64 libxcursor-dev:arm64 libxi-dev:arm64
 
