@@ -1,3 +1,7 @@
+2023-10-08  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/97c2744a16ad7e6cf6b546a7a6416ec6b21e3a6c ) and raygui ( https://github.com/raysan5/raygui/commit/85a5c104f509b183c8cc7db0d90c2ab7a2b198c8)
+
 2023-09-30  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Use Ruby-FFI 1.16 ( https://github.com/ffi/ffi )
